--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -1,12 +1,17 @@
-<html>
-    <head></head>
+<!DOCTYPE html >
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Задание 1</title>
+    </head>
     <body>
         <h1>It's my life</H1>
         <p>
             It is now and ever, <br/>
             I ain't  gonna live forever
         </p>
-        <img src="https://loiiver.github.io/loftschool/img/img1.jpg" alt="Котик" />
-        <img src="../../img/img2.jpg" alt="Белка" />
+        <img src="//loiiver.github.io/loftschool/img/img1.jpg" alt="Котик" />
+        <img src="/img/img2.jpg" alt="Белка" style="border-radius: 70%" />
+        <h1>Заголовок</h1>
     </body>
-</html>
+</html> 
