--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Летящий в небе самолёт - зрелище загадочное и романтическое. <br />
             Крылатая машина величственно плывёт в вышине, мерцая разноцветными <br />
             огнями, и почему-то кажется, что она наполнена удивительными людьми,  <br />
-            спешашщими далеко-далеко по очень важным делам
+            спешашщими далеко-далеко по очень важным делам.
         </p>
     </div>
 </body>
