--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="trip-description">
-        <img src="/img/img1.jpg" class="trip-description__img" alt="Котик" width="150px" height="150px" />
+        <img src="img/img1.jpg" class="trip-description__img" alt="Котик" width="150px" height="150px" />
         <div class="trip-description-item"></div>
         <span class="trip-description__date">12.10.2016</span>
         <br/>
