--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Задаени 2</title>
+    <title>Задание 2</title>
     <style>
         .trip-description__img {
             border-radius: 50%;
