--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -11,6 +11,6 @@
             I ain't  gonna live forever
         </p>
         <img src="//loiiver.github.io/loftschool/img/img1.jpg" alt="Котик" />
-        <img src="/img/img2.jpg" alt="Белка" style="border-radius: 70%" />
+        <img src="/loftschool/img/img2.jpg" alt="Белка" style="border-radius: 70%" />
     </body>
 </html> 
